# custom_logger

./: .cursorignore  .cursorrules  .gitignore  CLAUDE.md  MANIFEST.in  README - custom_logger.md  README.md  README_custom_logger.md  collect_py.py  debug_log_test.py  pyproject.toml  pytest.ini  readme - custom_logger  readme_config_manager.md  readme_demo_config_manager.md  requirements.txt  setup.py  temp_test_logger_len.py  所有的测试用例.txt  所有的源代码.txt
.claude/: settings.local.json
.cursor/rules/: project.mdc
concurrent/: test_config.yaml
concurrent_test/: config.yaml
docs/: architecture_design.md  custom_logger_requirements_doc.md  detailed_design.md  worker_serializable_config_guide.md  新API架构说明.md  概要设计文档.md  需求变更.md  需求变更及bug.md
docs/01_需求文档/: custom_logger_requirements_doc.md
docs/03_架构设计文档/: architecture_design.md
docs/05_详细设计文档/: detailed_design.md
docs/06_测试方案文档/: 分模块日志测试方案.md
docs/错误/: .descriptions.xml  PyUnresolvedReferencesInspection.xml
src/config/: config.yaml
src/custom_logger/: __init__.py  config.py  formatter.py  logger.py  manager.py  queue_writer.py  types.py  writer.py
src/demo/: README_demo_guide.md  README_unified_demo.md  call_chain_comprehensive_demo.py  color_support_demo.py  complete_queue_demo.py  debug_call_stack_demo.py  demo_advanced_features.py  demo_comprehensive_custom_logger.py  demo_custom_logger.py  demo_new_api.py  demo_quick_start.py  demo_runner.py  new_api_demo.py  queue_based_logging_demo.py  simple_queue_demo.py  unified_demo_system.py  worker_params_demo.py  (+1 more)
tests/: conftest.py
(+68 files in other folders)
